--- a/guessGame.html
+++ b/guessGame.html
@@ -1,27 +1,32 @@
+<!DOCTYPE html>
 <html>
-	<body>
-	<script>
-		var x = Math.floor(Math.random() * 10) + 1;
-		var turns = 5;
-		var hint = 'Guess my number, 1-10!';
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Guessing Game</title>
+</head>
+<body>
+<script>
+    var x = Math.floor(Math.random() * 10) + 1;
+    var turns = 0;
+    var hint = 'Guess My Number Between 1-10!';
 
-		while (turns > 0) {	
-  		  var guess = prompt(hint +
-      		' You have ' + turns + ' guesses left.');
-  		if (!guess) break;
-  		guess = Number(guess);
-  
-  	  	if (guess == x) {
-	  	  document.write('<p>YOU WIN!</p>');
-    	  turns = 0;
-  		} else {
-    		hint = 'Nope.';
-    		if (guess < x) hint += ' Too small!';
-    		if (guess > x) hint += ' Too big!';
-    		turns = turns - 1;
-  	  		}
-		}
-		alert('The secret number was ' + x + '.');
-	</script>
-	</body>
+    while (turns < 10) {
+        var guess = prompt(hint +
+        '\nYou Have Guessed ' + turns + ' Times.');
+        if (!guess) break;
+        guess = Number(guess);
+        if (guess == x) {
+            document.write('<p>YOU WIN!</p>');
+            turns;
+        } else {
+            hint = 'Nope.';
+
+            if (guess < x) hint += ' Too Small!';
+            if (guess > x) hint += ' Too Big!';
+            turns = turns + 1;
+        }
+    }
+    alert('The secret number was ' + x + '.');
+</script>
+</body>
 </html>
