--- a/guessGame.html
+++ b/guessGame.html
@@ -17,7 +17,7 @@
         guess = Number(guess);
         if (guess == x) {
             document.write('<p>YOU WIN!</p>');
-            turns;
+            turns = 10;
         } else {
             hint = 'Nope.';
 
