--- a/guessGame.html
+++ b/guessGame.html
@@ -3,30 +3,42 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Guessing Game</title>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
-<script>
+  <script>
+    function sendScore() {
+      $.ajax({
+        type: "POST",
+        url: 'send_score.php',
+        data: { turns: count },
+        success: function(data) { console.log(data) }
+      });
+    }
+
     var x = Math.floor(Math.random() * 10) + 1;
-    var turns = 0;
+    var count = 0;
     var hint = 'Guess My Number Between 1-10!';
 
-    while (turns < 10) {
+    while (count < 10) {
         var guess = prompt(hint +
-        '\nYou Have Guessed ' + turns + ' Times.');
+        '\nYou Have Guessed ' + count + ' Times.');
         if (!guess) break;
         guess = Number(guess);
         if (guess == x) {
             document.write('<p>YOU WIN!</p>');
-            turns = 10;
+            sendScore();
+            break;
         } else {
             hint = 'Nope.';
 
             if (guess < x) hint += ' Too Small!';
             if (guess > x) hint += ' Too Big!';
-            turns = turns + 1;
+            count++;
         }
     }
     alert('The secret number was ' + x + '.');
+    console.log(count);
 </script>
 </body>
 </html>
