--- a/guessGame.html
+++ b/guessGame.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
-    <title>Guessing Game</title>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Guessing Game</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
   <script>
@@ -16,29 +16,39 @@
       });
     }
 
+    function getHighScore() {
+      $.get( "GetHighScore.php", function(data) {
+        $( "#currentHighScore" ).html(data);
+      });
+    }
+
     var x = Math.floor(Math.random() * 10) + 1;
     var count = 0;
     var hint = 'Guess My Number Between 1-10!';
 
     while (count < 10) {
-        var guess = prompt(hint +
+      var guess = prompt(hint +
         '\nYou Have Guessed ' + count + ' Times.');
-        if (!guess) break;
-        guess = Number(guess);
-        if (guess == x) {
-            document.write('<p>YOU WIN!</p>');
-            sendScore();
-            break;
-        } else {
-            hint = 'Nope.';
+      if (!guess) break;
+      guess = Number(guess);
+      if (guess == x) {
+        document.write('<p>YOU WIN!</p>');
+        sendScore();
+        getHighScore();
+        break;
+      } else {
+        hint = 'Nope.';
 
-            if (guess < x) hint += ' Too Small!';
-            if (guess > x) hint += ' Too Big!';
-            count++;
-        }
+        if (guess < x) hint += ' Too Small!';
+        if (guess > x) hint += ' Too Big!';
+        count++;
+      }
     }
     alert('The secret number was ' + x + '.');
     console.log(count);
-</script>
+  </script>
+
+  <span id="currentHighScore"></span>
+
 </body>
 </html>
