Added guess a number text

--- a/guessGame.html
+++ b/guessGame.html
@@ -44,6 +44,7 @@
     console.log(count);
   </script>
 
+  Guess a number between 1-10<br />
   <input type="text" name="guess" id="numberGuess" /><input type="button" value="Guess!" onclick="checkGuess();" />
   <br />
   <span id="hintText"></span><br />
